# Computer-Geometry

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/common/: BigDecimal.cpp  BigDecimal.h  BigInt.cpp  BigInt.h  Geometry.cpp  Geometry.h
src/cpp/common/: BigDecimal.cpp  BigDecimal.h  BigInt.cpp  BigInt.h  Geometry.cpp  Geometry.h
src/qt/: MainWindow.cpp  MainWindow.h  main.cpp
src/qt/widgets/: Task01Widget.cpp  Task01Widget.h  Task02Widget.cpp  Task02Widget.h  Task03Widget.cpp  Task03Widget.h  Task04Widget.cpp  Task04Widget.h  Task05Widget.cpp  Task05Widget.h  Task06Widget.cpp  Task06Widget.h
src/qt/widgets/tasks7_12/: Task07to09Widget.cpp  Task07to09Widget.h  Task10Widget.cpp  Task10Widget.h  Task11Widget.cpp  Task11Widget.h  Task12Widget.cpp  Task12Widget.h  Task13Widget.cpp  Task13Widget.h
src/widgets/: Task01Widget.cpp  Task01Widget.h  Task02Widget.cpp  Task02Widget.h  Task03Widget.cpp  Task03Widget.h  Task04Widget.cpp  Task04Widget.h  Task05Widget.cpp  Task05Widget.h  Task06Widget.cpp  Task06Widget.h
